# jaffle-shop_test

./: .env.example  .gitattributes  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  docker-compose.yml  main.py  package-lock.yml  packages.yml  pyproject.toml
.github/workflows/: sqlfluff.yml
models/marts/: _time_spine.yml  customers.sql  customers.yml  locations.sql  metricflow_time_spine.sql  order_items.sql  orders.sql  orders.yml  products.sql  supplies.sql
models/mdpi/: avg_items_by_location.sql  avg_items_by_location.yml  avg_nb_items_sold_ttc.sql  avg_nb_items_sold_ttc.yml  top3_customers_by_invoiced_amount_month.sql  top3_customers_by_invoiced_amount_month.yml  total_cost_by_supplier_and_product_type.sql  total_cost_by_supplier_and_product_type.yml  total_variation_months.sql  total_variation_months.yml
models/staging/: stg_locations.sql  stg_order_items.yml  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_supplies.sql
profiles/: profiles.yml
