[project]
name = "jaffle-shop-test"
version = "0.1.0"
description = "The first exercice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core~=1.8",
    "dbt-postgres~=1.8",
    "psycopg[binary]>=3.1", # binary for the speed
    "python-dotenv>=1.1.1", # for the security
]
